--- a/src/components/Voters_Table/voters_table.css
+++ b/src/components/Voters_Table/voters_table.css
@@ -1,10 +1,14 @@
 table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 80%;
+    margin-left:10%; 
+    margin-right:10%;
+    border: 1px solid #ddd;
   }
   
   table td, table th {
+    text-align: center;
     border: 1px solid #ddd;
     padding: 8px;
   }
