--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 
 .appForm {
   width: 60%;
-  background-color: whitesmoke;
+  background-color: white;
   padding: 25px 40px;
   overflow: auto;
 }
