--- a/src/components/Voters_Table/voters_table.css
+++ b/src/components/Voters_Table/voters_table.css
@@ -24,3 +24,98 @@ table {
     background-color: #1d04ad;
     color: white;
   }
+  
+  
+  input[name=id1], select {
+    width: 20%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  input[name=first_name1], select {
+    width: 20%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  input[name=last_name1], select {
+    width: 20%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  input[name=email1], select {
+    width: 25%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  } 
+
+  .button {
+    background-color: #1d04ad; 
+    border: none;
+    color: white;
+    padding: 10px 50px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 6px;
+  }
+  
+  .button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #1d04ad;
+
+  }
+  
+  .button1:hover {
+    background-color: #1d04ad;
+    color: white;
+  }
+
+  .button2 {
+    padding: 1px 5px;
+    background-color: white; 
+    color: black; 
+    border: 2px solid #1d04ad;
+
+  }
+  
+  .button2:hover {
+    background-color: #1d04ad;
+    color: white;
+  }
+
+  .button3 {
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 3%;
+    padding: 15px 200px;
+    background-color: white; 
+    color: black; 
+    border: 2px solid #1d04ad;
+
+  }
+  
+  .button3:hover {
+    background-color: #1d04ad;
+    color: white;
+  }
